CHG: Increased width of menu in collection bar now that fonts have also increased - prevents unwanted wrapping. Updated legacy_styling plugin to revert this change also.
git-svn-id: http://svn.montala.net/svn/resourcespace@5060 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -85,10 +85,10 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 #CollectionMinRightNav li:first-child {border-left:none;}
 
 /*Collection layout*/
-#CollectionMenu{width: 166px;position: absolute;left: 25px;top: 6px;text-align:left;}
+#CollectionMenu{width: 206px;position: absolute;left: 25px;top: 6px;text-align:left;}
 #CollectionMenuExp{width: 216px;position: absolute;left: 25px;top: 6px;text-align:left;}
 #CollectionSpace{font-size: 0.95em;text-align:left;}
-.CollectionSpace{position: absolute;left: 199px;top: 6px;}
+.CollectionSpace{position: absolute;left: 249px;top: 6px;}
 .CollectionSpaceExp {position: absolute;left: 249px;top: 6px;font-size: 0.95em;text-align:left;}
 .CollectBack h2 {font-size: 1.3em;}
 #CollectionMenu ul {padding:0.2em 0;margin:0;list-style:none;}
