--- a/plugins/legacy_styling/css/style.css
+++ b/plugins/legacy_styling/css/style.css
@@ -57,3 +57,7 @@ h1, h2, .RecordPanel .Title {font: normal 1.5em Arial, Helvetica, sans-serif;}
     margin-top:0;    
     }
 
+
+#CollectionMenu{width: 166px;}
+.CollectionSpace{left: 199px;}
+
